--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Michael F Bryan
+title: My Blog
 email: michaelfbryan@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     A place to write down interesting stuff I do, projects I work on, and 
