Re-organised things so the posts pagination will work

--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,13 @@ sass:
 kramdown:
   input: GFM
 
+paginate: 5
+paginate_path: "/posts/page:num/"
+
 # Include everything in the _pages directory
 include: ["_pages"] 
 
 # Make all links just use the page/post's title
 permalink: /:title/ 
+
+gems: ["jekyll-paginate"]
